--- a/AgendaApi/AgendaApi/appsettings.json
+++ b/AgendaApi/AgendaApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "AgendaConnection": "Server=localhost\\SQLEXPRESS;Database=ProdutosDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+
   "AllowedHosts": "*"
 }
