Organização do codigo , Criação dos DTOS , Validações , AutoMap, correção do Service.

--- a/AgendaApi/appsettings.json
+++ b/AgendaApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "AgendaConnection": "Server=localhost\\SQLEXPRESS;Database=ProdutosDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "Connection": "Server=localhost\\SQLEXPRESS;Database=AgendaDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
 
   "AllowedHosts": "*"
