correções  e criação autenticação

--- a/AgendaApi/appsettings.json
+++ b/AgendaApi/appsettings.json
@@ -9,5 +9,13 @@
     "Connection": "Server=localhost\\SQLEXPRESS;Database=AgendaDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
 
+  "JwtSettings": {
+    "Secret": "Z29wR29wU2VjcmV0QXBpQWdlbmRhMTIzITIzITIzISE=",
+    "Issuer": "AgendaApi",
+    "Audience": "AgendaFrontend",
+    "ExpirationMinutes": 120
+  },
+
+
   "AllowedHosts": "*"
 }
